# sansio-mqtt

./: .gitignore  AGENTS.md  Cargo.toml  _typos.toml  opencode.json
.claude/: settings.json
.claude/agents/: mqtt-ai-setup-reviewer.md  mqtt-api-reviewer.md  mqtt-ci-reviewer.md  mqtt-nostd-reviewer.md  mqtt-parser-reviewer.md  mqtt-protocol-spec-reviewer.md  mqtt-test-reviewer.md  mqtt-unsafe-reviewer.md
.github/workflows/: ci.yml
crates/sansio-mqtt-v5-client/: Cargo.toml
crates/sansio-mqtt-v5-client/src/: lib.rs
crates/sansio-mqtt-v5-contract/: Cargo.toml
crates/sansio-mqtt-v5-contract/src/: action.rs  error.rs  input.rs  lib.rs  options.rs  timer.rs
crates/sansio-mqtt-v5-contract/tests/: contracts.rs
crates/sansio-mqtt-v5-protocol/: Cargo.toml
crates/sansio-mqtt-v5-protocol/src/: client.rs  error.rs  lib.rs  limits.rs  proto.rs  queues.rs  scratchpad.rs  session.rs  session_ops.rs  timer_queue.rs  types.rs
crates/sansio-mqtt-v5-protocol/src/state/: connected.rs  connecting.rs  disconnected.rs  mod.rs  start.rs
crates/sansio-mqtt-v5-protocol/tests/: client_protocol.rs  packet_id.rs  poll_decode.rs  protocol_trait.rs  timer_queue.rs
crates/sansio-mqtt-v5-state-machine/: Cargo.toml
crates/sansio-mqtt-v5-state-machine/src/: context.rs  lib.rs  states.rs  transitions.rs
crates/sansio-mqtt-v5-state-machine/tests/: block_a_connection.rs  block_b_keepalive.rs  block_cd_publish.rs  block_ef_subscribe_qos2.rs  block_gh_inbound_disconnect.rs
crates/sansio-mqtt-v5-tokio/: Cargo.toml
crates/sansio-mqtt-v5-tokio/examples/: cli.rs  connect_test_mosquitto.rs  echo.rs
crates/sansio-mqtt-v5-tokio/src/: backoff.rs  client.rs  connect.rs  connection.rs  driver.rs  error.rs  event.rs  event_loop.rs  lib.rs  timer.rs  transport.rs
crates/sansio-mqtt-v5-tokio/tests/: backoff.rs  client_event_loop.rs  connection.rs  integration_mock_broker.rs
crates/sansio-mqtt-v5-tokio/tests/integration/: auth.rs  common.rs  core_flows.rs  main.rs  session.rs
crates/sansio-mqtt-v5-types/: Cargo.toml  README.md
crates/sansio-mqtt-v5-types/src/: lib.rs
crates/sansio-mqtt-v5-types/src/encoder/: auth.rs  basic.rs  connack.rs  connect.rs  control_packet.rs  disconnect.rs  error.rs  mod.rs  pingreq.rs  pingresp.rs  properties.rs  puback.rs  pubcomp.rs  publish.rs  pubrec.rs  pubrel.rs  suback.rs  subscribe.rs  unsuback.rs  unsubscribe.rs
crates/sansio-mqtt-v5-types/src/parser/: auth.rs  basic.rs  connack.rs  connect.rs  control_packet.rs  disconnect.rs  mod.rs  pingreq.rs  pingresp.rs  properties.rs  puback.rs  pubcomp.rs  publish.rs  pubrec.rs  pubrel.rs  reserved.rs  suback.rs  subscribe.rs  unsuback.rs  unsubscribe.rs
crates/sansio-mqtt-v5-types/src/types/: auth.rs  basic.rs  connack.rs  connect.rs  control_packet.rs  disconnect.rs  mod.rs  pingreq.rs  pingresp.rs  properties.rs  puback.rs  pubcomp.rs  publish.rs  pubrec.rs  pubrel.rs  reason_code.rs  reserved.rs  suback.rs  subscribe.rs  unsuback.rs  unsubscribe.rs
crates/sansio-mqtt-v5-types/tests/: basic_construction.rs  mirror_encode_and_parse.rs  property_compatibility.rs
crates/sansio-mqtt5/: Cargo.toml
crates/sansio-mqtt5-core/: Cargo.toml
crates/sansio-mqtt5-core/tests/: encode-and-parse.rs  mirror_encode_and_parse.rs  mqtt-packet-generate.js.tpl  mqtt-packet-generate.rs
crates/sansio-mqtt5/src/: lib.rs
crates/sansio-mqtt5/tests/: encode-and-parse.rs  mqtt-packet-generate.rs
crates/test-sansio-mqtt-v5-tokio-mosquitto/: Cargo.toml
crates/test-sansio-mqtt-v5-tokio-mosquitto/src/: lib.rs  passwd
crates/test-sansio-mqtt-v5-tokio-mosquitto/tests/: auth.rs  core_flows.rs  error_propagation.rs  keep_alive_advanced.rs  large_payload.rs  message_properties.rs  network_failures.rs  qos2_advanced.rs  reconnect.rs  retain.rs  server_disconnect.rs  session.rs  session_advanced.rs  subscriptions.rs  topic_aliases.rs  topic_filters.rs  will_messages.rs  will_session_interactions.rs
docs/superpowers/checklists/: 2026-04-17-mqtt-v5-client-compliance-closure.md  2026-04-17-mqtt-v5-client-requirement-traceability.md  2026-04-18-mqtt-v5-client-conformance-report.md  2026-04-18-types-derive-matrix.md
docs/superpowers/plans/: 2026-04-16-mqtt-v5-client-stack.md  2026-04-17-mqtt-v5-compliance-closure-execution.md  2026-04-17-mqtt-v5-protocol-spec-conformance-fixes.md  2026-04-17-sansio-mqtt-v5-protocol-mvp-client.md  2026-04-18-ergonomic-construction-basic-types-implementation.md  2026-04-18-mqtt-v5-tokio-implementation.md  2026-04-18-types-derive-normalization-implementation.md  2026-04-19-client-settings-effective-limit-negotiation-implementation.md  2026-04-19-client-state-settings-scratchpad-implementation.md  2026-04-19-inbound-manual-ack-reject-implementation.md  2026-04-19-publish-subscription-identifiers-multi-implementation.md  2026-04-19-task1-document-v5-types.md  2026-04-19-task2-conformance-and-tracing.md  2026-04-19-task2-reviewer.md  2026-04-19-task2a-proto-refactor-statig.md  2026-04-19-task2b-proto-refactor-plain.md  2026-04-19-userwrite-message-id-and-enum-simplification-implementation.md  2026-04-19-v5-protocol-state-handler-trait-implementation.md  2026-04-19-v5-types-non-exhaustive-hardening.md  2026-04-25-integration-tests.md  2026-05-15-integration-test-expansion.md  2026-05-16-reconnect-backoff.md
docs/superpowers/specs/: 2026-04-14-agents-md-index-spec-design.md  2026-04-16-mqtt-v5-client-stack-design.md  2026-04-17-mqtt-v5-tokio-client-design.md  2026-04-17-sansio-mqtt-v5-protocol-mvp-client-design.md  2026-04-18-ergonomic-construction-basic-types-design.md  2026-04-18-types-derive-normalization-design.md  2026-04-19-client-settings-effective-limit-negotiation-design.md  2026-04-19-client-state-settings-scratchpad-design.md  2026-04-19-inbound-manual-ack-reject-design.md  2026-04-19-parallel-docs-and-refactor-design.md  2026-04-19-publish-subscription-identifiers-multi-design.md  2026-04-19-userwrite-message-id-and-enum-simplification-design.md  (+4 more)
fuzz/: .gitignore  Cargo.toml  generate_corpus.py
fuzz/fuzz_targets/: parse_control_packet.rs  roundtrip_control_packet.rs
(+101 files in other folders)
