[package]
name = "sansio-mqtt-v5-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sansio = { workspace = true, default-features = false }
sansio-mqtt-v5-contract = { workspace = true, default-features = false }
sansio-mqtt-v5-state-machine = { workspace = true, default-features = false }
