[package]
name = "sansio-mqtt-v5-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sansio = { workspace = true, default-features = false }
sansio-mqtt-v5-types = { workspace = true, default-features = false }
thiserror = { workspace = true, default-features = false }
bytes = { workspace = true, default-features = false }
winnow = { workspace = true, default-features = false }
tracing = { workspace = true, default-features = false }
bimap = { workspace = true, default-features = false }
