[package]
name = "sansio-mqtt-v5-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sansio = { workspace = true }
sansio-mqtt-v5-types = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
winnow = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
encode = { workspace = true }
tokio = { workspace = true, optional = true, features = ["time"] }

[features]
tokio = ["dep:tokio"]
