[package]
name = "sansio-mqtt-v5-tokio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sansio = { workspace = true, default-features = false }
sansio-mqtt-v5-protocol = { workspace = true, default-features = false }
sansio-mqtt-v5-types = { workspace = true, default-features = false }
tokio = { workspace = true, features = ["macros", "net", "io-util", "io-std", "signal", "rt", "sync", "time"] }
tokio-util = { workspace = true, features = ["time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "net", "io-util", "io-std", "signal", "rt-multi-thread", "sync", "time"] }
encode = { workspace = true, default-features = false }
