[package]
name = "sansio-mqtt-v5-tokio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sansio = { workspace = true }
sansio-mqtt-v5-protocol = { workspace = true }
sansio-mqtt-v5-types = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "net",
  "io-util",
  "io-std",
  "signal",
  "rt",
  "sync",
  "time",
] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = [
  "macros",
  "net",
  "io-util",
  "io-std",
  "signal",
  "rt-multi-thread",
  "sync",
  "time",
] }
encode = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "ansi"] }
