[package]
name = "sansio-mqtt5-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]

[dependencies]
winnow = { workspace = true }
strum = { workspace = true, features = ["derive"] }
beef = { workspace = true }
thiserror = { workspace = true }
vec1 = { workspace = true }
encode = { workspace = true }
nutype = { workspace = true, features = ["new_unchecked"] }

[dev-dependencies]
rstest = { workspace = true }
