[package]
name = "sansio-mqtt-v5-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]

[dependencies]
winnow = { workspace = true, features = ["alloc"] }
strum = { workspace = true, features = ["derive"] }
bytes = { workspace = true }
thiserror = { workspace = true }
encode = { workspace = true, features = ["alloc"] }

[dev-dependencies]
rstest = { workspace = true }
